--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,11 @@
-styles.css
+#video-background {
+/*  making the video fullscreen  */
+  position: fixed;
+  right: 0; 
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto; 
+  height: auto;
+  z-index: -100;
+}
