--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,639 @@
-#video-background {
-/*  making the video fullscreen  */
-  position: fixed;
-  right: 0; 
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  width: auto; 
-  height: auto;
-  z-index: -100;
+html, body {
+	font-family: 'Open Sans', sans-serif;
+}
+
+.latoBold {
+	font-family: 'Lato', sans-serif;
+	font-weight: 700;
+}
+
+.ptMono {
+	font-family: 'PT Mono', monospace;
+	font-size: 0.8rem;
+	text-align: letf;
+}
+
+.red {
+	color: red;
+}
+
+.white {
+	color: #fff;
+}
+
+.black {
+	color: black;
+}
+
+.containerWidth {
+	width: 80%;
+	margin: 0 auto;
+}
+
+.containerWidthTwo {
+	width: 50%;
+	margin: 0 auto;
+}
+
+.containerWidthThree {
+	width: 65%;
+	margin: 0 auto;
+}
+
+.oneHundred {
+	margin-top: 100px;
+}
+
+.moreSpace {
+	line-height: 18px;
+}
+
+
+
+/********* Home Page Video ********/
+
+#block {
+	width: 100%;
+	height: 1080px;
+}
+
+#block p {
+	position: relative;
+	top: 70%;
+	color: #fff;
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+	line-height: 1.3;
+
+}
+
+.single {
+	display: none;
+}
+
+#block span {
+	text-align: center;
+	display: block;
+	position: relative;
+	top: 90%;
+	color: rgba(255,255,255,0.2);
+}
+
+/********* Work Header ********/
+
+.workHeader {
+	position: relative;
+	height: 1080px;
+	width: 100%;
+	background-color: red;
+	
+}
+
+.ubisoft {
+	background: url(../images/ubisoft/header06.png);
+}
+
+.zombie {
+	background: url(../images/limbic/header02a.png);
+}
+
+.eve {
+	background: url(../images/ccp/header03a.png);
+}
+
+.entertainment {
+	background: url(../images/entertainment/darksider2.png);
+}
+
+.personal {
+	background: url(../images/personal/header03.png);
+}
+
+
+h1 {
+	color: #fff;
+	font-size: 3rem;
+	padding-top: 40px;
+}
+
+
+/********* Work ********/
+
+.work {
+	background-color: #fff;
+
+}
+
+.work h3 {
+	text-align: center;
+	margin-top: 60px;
+}
+
+.work p {
+	margin-top: 20px;
+	line-height: 1.8;
+}
+
+video {
+	text-align: center;
+	margin: 100px auto;
+}
+
+.center {
+	margin: 10px;
+	text-align: center;
+	color: black;
+	font-family: 'Lato', sans-serif;
+}
+
+.cycle-slideshow {
+	width: 1080px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.workCenter {
+	text-align: center;
+	margin-bottom: 160px;
+
+}
+
+a {
+	text-decoration: none;
+	margin: 0 6px;
+	color: black;
+}
+
+a:hover {
+	color: red;
+}
+
+
+
+
+/********* About ********/
+
+section.about {
+	background-color: red;
+	color: #fff;
+	padding-top: 100px;
+	padding-bottom: 100px;
+
+
+}
+
+h4 {
+	font-family: 'Lato', sans-serif;
+	font-weight: 700;
+	font-size: 0.8rem;
+	letter-spacing: 1px;
+}
+
+
+
+li {
+	font-size: .7rem;
+
+}
+
+.chunk {
+	display: inline-block;
+	line-height: 2;
+	width: 24%;
+	vertical-align: top;
+	margin-right: 5px;
+}
+
+/********* Footer ********/
+
+.footer {
+	background-color: #211C1A;
+	height: auto;
+	padding-top: 180px;
+	padding-bottom: 20px;
+}
+
+.footer img {
+	text-align: center;
+	display: block;
+	margin: 0 auto;
+}
+
+nav {
+	color: white;
+	text-align: center;
+
+}
+
+nav ul li {
+	display: inline-block;
+	margin: 30px;
+	letter-spacing: 1.6px;
+	font-family: 'Lato', sans-serif;
+
+}
+
+.footer a {
+	color: white;
+}
+
+
+.footer a:hover {
+	color: red;
+}
+
+.footer span {
+	color: grey;
+	font-size: 0.7rem;
+	display: block;
+	text-align: center;
+	letter-spacing: 0.3px;
+}
+
+.footer span a {
+	color: grey;
+	text-align: none;
+	font-weight: bold;
+	letter-spacing: 4px;
+}
+
+
+
+
+/********* Media Queries ********/
+
+/* Desktop 1980px */
+@media screen and (max-width: 1980px) {
+
+#block {
+	width: auto;
+	height: 900px;
+}
+
+.workHeader {
+	height: 900px;
+}
+
+#block span {
+	top: 88%;
+}
+
+}
+
+/* Desktop 1650px */
+@media screen and (max-width: 1650px) {
+
+#block {
+	width: auto;
+	height: 700px;
+}
+
+.workHeader {
+	height: 700px;
+}
+
+#block span {
+	top: 85%;
+}
+
+}
+
+/* Desktop 1280px */
+@media screen and (max-width: 1280px) {
+
+#block {
+	width: auto;
+	height: 600px;
+}
+
+#block p {
+	font-size: 0.9rem;
+}
+
+.workHeader {
+	height: 600px;
+}
+
+#block span {
+	top: 84%;
+}
+
+.containerWidthTwo {
+	width: 70%;
+}
+
+.workCenter video {
+	max-width: 90%;
+	height: auto;
+}
+
+.cycle-slideshow { 
+	width: 90%;
+}
+
+.cycle-slideshow img { 
+	width: 100%; 
+	height: auto;
+}
+
+.chunk {
+	width: 40%;
+	margin-bottom: 30px;
+	margin-right: 48px;
+}
+
+}
+
+/* Desktop 1080px */
+@media screen and (max-width: 1080px) {
+
+#block {
+	width: auto;
+	height: 400px;
+}
+
+#block p {
+	font-size: 0.8rem;
+}
+
+.workHeader {
+	height: 400px;
+}
+
+#block span {
+	top: 80%;
+}
+
+.containerWidthTwo {
+	width: 70%;
+}
+
+.workCenter video {
+	max-width: 80%;
+	height: auto;
+}
+
+.cycle-slideshow { 
+	width: 80%;
+}
+
+.cycle-slideshow img { 
+	width: 100%; 
+	height: auto;
+}
+
+}
+
+/* Phone 768px */
+@media screen and (max-width: 768px) {
+
+.workCenter video {
+	max-width: 80%;
+	height: auto;
+}
+
+#block {
+	width: auto;
+	height: 300px;
+}
+
+
+
+#block p {
+
+	font-size: 0.78em;
+
+}
+
+#block span {
+	text-align: center;
+	display: block;
+	position: relative;
+	top: 88%;
+	color: rgba(255,255,255,0.2);
+	padding-top: 15px;
+	padding-bottom: 10px;
+	font-size: 0.7rem;
+}
+
+.containerWidthTwo {
+	width: 70%;
+}
+
+.workHeader {
+	position: relative;
+	height: 300px;
+	max-width: 100%;
+	text-align: left;
+
+}
+
+.workHeader h1 {
+	font-size: 1.4rem;
+	margin-bottom: 8px;
+}
+
+.workHeader p {
+	font-size: 0.7rem;
+	line-height: 18px;
+}
+
+.work h3 {
+	text-align: left;
+	margin-top: 50px;
+}
+
+.work p {
+	margin-top: 10px;
+}
+
+section.about {
+	padding-bottom: 40px;
+	padding-top: 60px;
+}
+
+/*.chunk {
+	width: 100%;
+	text-align: left;
+	margin-bottom: 30px;
+	margin-right: auto;
+	margin-left: auto;
+}*/
+
+.chunk {
+	width: 30%;
+	margin-bottom: 30px;
+	margin-right: 80px;
+}
+
+
+
+.workCenter {
+	margin-bottom: 40px;
+}
+
+.oneHundred {
+	margin-top: 40px;
+}
+
+video {
+	margin: 40px auto;
+}
+
+.cycle-slideshow { 
+	width: 80%;
+}
+
+.cycle-slideshow img { 
+	width: 100%; 
+	height: auto;
+}
+
+.center {
+	font-size: 0.8rem;
+}
+
+.footer {
+	padding-top: 60px;
+}
+
+nav ul li {
+	display: block;
+
+}
+
+
+
+/* Phone 480px */
+@media screen and (max-width: 560px) {
+
+.workCenter video {
+	max-width: 90%;
+	height: auto;
+}
+
+#block {
+	width: auto;
+	height: 200px;
+}
+
+/*video {
+	max-width: 100%;
+	
+}*/
+
+.triplet {
+	display: none;
+}
+
+.single {
+	display: block;
+	/* position: relative;*/
+}
+
+#block p {
+	
+	font-size: 1rem;
+	
+
+}
+
+#block span {
+	text-align: center;
+	display: block;
+	position: relative;
+	top: 90%;
+	color: rgba(255,255,255,0);
+	padding-top: 15px;
+	padding-bottom: 10px;
+	font-size: 0.7rem;
+}
+
+
+
+.workHeader {
+	position: relative;
+	height: 200px;
+	max-width: 100%;
+	text-align: center;
+
+}
+
+.workHeader h1 {
+	font-size: 1.4rem;
+	margin-bottom: 8px;
+}
+
+.workHeader p {
+	font-size: 0.7rem;
+	line-height: 18px;
+}
+
+.work h3 {
+	text-align: left;
+	margin-top: 30px;
+}
+
+.work p {
+	margin-top: 10px;
+}
+
+
+.containerWidthTwo {
+	width: 70%;
+}
+
+section.about {
+	padding-bottom: 40px;
+	padding-top: 60px;
+}
+
+.chunk {
+	width: 100%;
+	text-align: left;
+	margin-bottom: 20px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.cycle-slideshow { 
+	width: 90%;
+}
+
+.cycle-slideshow img { 
+	width: 100%; 
+	height: auto;
+}
+
+.center {
+	font-size: 0.8rem;
+}
+
+.footer {
+	padding-top: 60px;
+}
+
+nav ul li {
+	display: block;
+
+}
+
+/* Phone 360px */
+@media screen and (max-width: 360px) {
+	#block {
+	width: auto;
+	height: 150px;
+}
+
+#block p {
+	font-size: 0.8rem;
+}
+
+.workHeader {
+	height: 150px;
+}
+
+}
+
+
 }
