--- a/css/styles.css
+++ b/css/styles.css
@@ -89,16 +89,16 @@ html, body {
 	
 }
 
+.eve {
+	background: url(../images/ccp/header03a.png);
+}
+
 .ubisoft {
 	background: url(../images/ubisoft/header06.png);
 }
 
 .zombie {
 	background: url(../images/limbic/header02a.png);
-}
-
-.eve {
-	background: url(../images/ccp/header03a.png);
 }
 
 .entertainment {
@@ -296,7 +296,11 @@ nav ul li {
 	top: 85%;
 }
 
+
+
 }
+
+
 
 /* Desktop 1280px */
 @media screen and (max-width: 1280px) {
@@ -337,11 +341,19 @@ nav ul li {
 }
 
 .chunk {
-	width: 40%;
+	width: 22%;
 	margin-bottom: 30px;
-	margin-right: 48px;
+	margin-right: 21px;
 }
 
+}
+
+/* Desktop 1263px */
+@media screen and (max-width: 1263px) {
+	.chunk {
+		width: 40%;
+		margin-right: 48px;
+	}
 }
 
 /* Desktop 1080px */
